--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.6",
+    "react-github-btn": "^1.4.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
