--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -7,8 +7,8 @@ SHARED_SECRET_TOKEN=some_secret
 ENVIRONMENT=LITE
 
 # these must match what you have in your docker-compose-local-dev.yml for postgres
-# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:5432/${POSTGRES_DB}
-DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
+# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:${POSTGRES_PORT}/${POSTGRES_DB}
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
 
 # replace with FULL if you are testing with a full stack
 # ENVIRONMENT=FULL
