--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@react-email/tailwind": "^0.1.0",
     "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-table": "^8.20.6",
+    "@types/lodash": "^4.17.15",
     "@uiw/codemirror-theme-github": "^4.23.7",
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
@@ -74,6 +75,7 @@
     "js-tiktoken": "^1.0.16",
     "json-2-csv": "^5.5.7",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
