--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -68,6 +68,7 @@ tokio-tungstenite = "0.24"
 url = "2.5.0"
 uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
 zstd = "0.13.2"
+backoff = { version = "0.4.0", features = ["tokio"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
