--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "framer-motion": "^11.16.4",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
+    "ioredis": "^5.5.0",
     "js-base64": "^3.7.7",
     "js-tiktoken": "^1.0.16",
     "json-2-csv": "^5.5.7",
